@@ -3,6 +3,7 @@ Contributors:
 Current -
 Chris Lyttle <chris@wilddev.net>
 Christian Stimmings <stimming@tuhh.de>
+Jon Lapham <lapham@extracta.com.br>
 
 Past -
 Carol Champagne <carol@io.com>
