@@ -22,10 +22,10 @@ Entering data in GnuCash is not that much different from entering data in your c
    <sect2 id="accounts2">
     <title>Files, Accounts and Transactions</title>
     <para>
-GnuCash provides three types of files for storing information: data files, backup files, and log files.   The main file that you will use to store your data is a data file.  You will probably have only one data file that you use for your home data, but GnuCash will automatically save a backup copy for you each time you save that data file.  GnuCash also provides log files which can be used to help reconstruct data.  Backup and log files are described later in this chapter.
+GnuCash uses <emphasis>files</emphasis> for storing information.  GnuCash provides three types of files: data files, backup files, and log files.   The main file that you will use to store your data is a data file.  You will probably have only one data file that you use for your home data, but GnuCash will automatically save a backup copy for you each time you save that data file.  GnuCash also provides log files which can be used to help reconstruct data.  Backup and log files are described later in this chapter.
     </para>
     <para>
-Although you only have one main data file, that file will contain many accounts.    An <emphasis>account</emphasis> is a record for keeping track of what you own, owe, spend or receive.   You probably already think of money you own or owe as being in an account.  For example, at some point you opened checking and savings accounts at a particular bank, and that bank sends you monthly statements showing how much money you <emphasis>own</emphasis> in these accounts.  Credit card accounts also send you statements showing what you <emphasis>owe</emphasis> to a credit card company, and the mortgage company may send you periodic statements showing how much you still <emphasis>owe</emphasis> on your loan. 
+An <emphasis>account</emphasis> is a place for keeping track of what you own, owe, spend or receive.   Although you only have one main data file, that file will contain many accounts.   You probably already think of money you own or owe as being in an account.  For example, at some point you opened checking and savings accounts at a particular bank, and that bank sends you monthly statements showing how much money you <emphasis>own</emphasis> in these accounts.  Credit card accounts also send you statements showing what you <emphasis>owe</emphasis> to a credit card company, and the mortgage company may send you periodic statements showing how much you still <emphasis>owe</emphasis> on your loan. 
     </para>
     <para>
 In GnuCash, accounts are also used to categorize money you receive or spend, even though these are not physical accounts that receive statements.  As we will cover more in Chapter 3, income type accounts are used to categorize money received (like a paycheck), and expense type accounts are used to categorize money spent (for pizza, to pay a bill, etc.)    These accounts function much like categories in some other financial programs, with a few advantages discussed in Chapter 3.
@@ -208,7 +208,7 @@ These tips provide useful information for beginning users.  To view more of the 
    <sect2 id="main2">
     <title>Account Tree Window</title>
      <para>
-You should now see the <guilabel>Accounts</guilabel> window, which looks like this:
+You should now see the <guilabel>Accounts</guilabel> window, which appears as shown below.  The exact layout of the account tree will depend on which default accounts you selected during the New Account Heirarchy Setup.  In this example, the "Simple Checkbook" accounts are shown.
     <screenshot id="mainwin">
 	  <mediaobject>
 	    <imageobject>
@@ -277,6 +277,11 @@ Here is a summary of the account tree window buttons:
     </listitem>
     <listitem>
      <para>
+<guibutton>Close</guibutton> - Use this function to close the current notebook page.
+     </para>
+    </listitem>
+    <listitem>
+     <para>
 <guibutton>Open</guibutton>, <guibutton>Edit</guibutton>, <guibutton>New</guibutton> and <guibutton>Delete</guibutton> - These are functions related to accounts. They are discussed in Chapter 3. 
      </para>
     </listitem>
@@ -325,9 +330,8 @@ GnuCash, as a Gnome application, also allows you to define your own menu shortcu
      <para>
 GnuCash allows you to customize your session by setting several preference options.  From the menu select <guimenu>Edit</guimenu> -&gt; <guimenuitem>Preferences</guimenuitem>, then make your desired changes using the list of items shown on the left.  Once you have finished making your preference changes,  select <guibutton>Apply</guibutton> or <guibutton>OK</guibutton> to apply the changes to your session.  (Selecting <guibutton>Apply</guibutton> applies the changes while leaving the Preferences window still open. Selecting <guibutton>OK</guibutton> applies the changes and closes the Preferences window.)  At any time, you can click on the <guibutton>Default</guibutton> button to return the options to the default preference setting.
      </para>
-     <para>
-In this section, we will discuss some of the items that relate to setting up your session and using files: <guilabel>Accounts</guilabel>, <guilabel>Business</guilabel>, <guilabel>General</guilabel> and <guilabel>Online Banking &amp; Importing</guilabel>.  The <guilabel>International</guilabel> item relates to currencies and is discussed in Chapter 9.  The <guilabel>Reconcile</guilabel>, <guilabel>Register</guilabel>, <guilabel>Register Colors</guilabel>, <guilabel>Scheduled Transactions</guilabel> and <guilabel>Transaction Matcher</guilabel> items relate to transactions and account registers, and they are discussed in Chapter 4.
-     </para>
+   <sect2 id="accounts2">
+    <title>Accounts</title>
      <para>
 The <guilabel>Accounts</guilabel> item lets you set the following options:
      </para>
@@ -365,6 +369,9 @@ The <guilabel>Accounts</guilabel> item lets you set the following options:
      </para>
     </listitem>
    </itemizedlist>
+   </sect2>
+   <sect2 id="business2">
+    <title>Business</title>
      <para>
 The <guilabel>Business</guilabel> item lets you set the following options:
      </para>
@@ -389,7 +396,15 @@ default in entries on bills. This setting applies only to new customers and
 vendors.
      </para>
     </listitem>
+    <listitem>
+     <para>
+<guilabel>Notify Bills Due?</guilabel> - Lets you set whether you want to be notified of when a bill is soon to be due.  If selected, you can specify the number of days in advance to notify with the <guilabel>Bills Due Days:</guilabel> option.
+     </para>
+    </listitem>
    </itemizedlist>
+   </sect2>
+   <sect2 id="general2">
+    <title>General</title>
      <para>
 In <guilabel>General</guilabel>, you will see the default settings shown here:
 
@@ -454,11 +469,168 @@ the display of the <guilabel>New Account Hierarchy Setup</guilabel> druid when <
 after the number of days set here.
      </para>
     </listitem>
+    <listitem>
+     <para>
+<guilabel>Use file compression</guilabel> - This option determines whether the GnuCash data file will be compressed or not.
+     </para>
+    </listitem>
    </itemizedlist>
+   </sect2>
+
+   <sect2 id="international2">
+    <title>International</title>
+    <para>
+The <guilabel>International</guilabel> preferences item allows you to control the coutry specific behavior of GnuCash.
+    </para>
+   <itemizedlist>
+    <listitem>
+     <para>
+<guilabel>Date Format</guilabel> - This item controls the appearance of the date.  The available options are US, UK, Europe, ISO, and Locale.  Choosing "Locale" will automatically determine the date format based on your operating system settings.
+     </para>
+    </listitem>
+    <listitem>
+     <para>
+<guilabel>New Account Default Currency</guilabel> - This item determines which currency will be selected by default when creating new accounts.
+     </para>
+    </listitem>
+    <listitem>
+     <para>
+<guilabel>Default Report Currency</guilabel> - This item determines which currency will be used by default when creating reports.
+     </para>
+    </listitem>
+    <listitem>
+     <para>
+<guilabel>Use 24-hour time format</guilabel> - This item toggles the use of 24 hour time format.
+     </para>
+    </listitem>
+    <listitem>
+     <para>
+<guilabel>Enable EURO support</guilabel> - If selected, enables support for the European Union EURO currency.
+     </para>
+    </listitem>
+   </itemizedlist>
+   </sect2>
+
+   <sect2 id="onlinebank2">
+    <title>Online Banking</title>
     <para>
 The <guilabel>Online Banking &amp; Importing</guilabel> item contains only one option, <guilabel>QIF Verbose Documentation</guilabel>.  The first time you use the importer (discussed later in this chapter), you may notice that the importer has detailed instructions on how to import a file.  Once you have become familiar with using the importer, you might want to turn off this option.  Turning off the option gives you less detail in the importer dialogs.
     </para>
+   </sect2>
+
+   <sect2 id="reconcile2">
+    <title>Reconcile</title>
+    <para>
+The <guilabel>Reconcile</guilabel> preferences item affects the behavior of GnuCash when reconciling accounts.  More information about reconciling accounts can be found in "Chapter 4: Entering Transactions" of this guide.
+    </para>
+    <itemizedlist>
+    <listitem>
+     <para>
+<guilabel>Automatic interest transfer</guilabel> - If selected, prior to reconciling an account which charges or pays interest, prompt the user to enter a transaction for the iterest charge or payment.  Currently only enabled for Bank, Credit, Mutual, Asset, Receivable, Payable, and Liability accounts.
+     </para>
+    </listitem>
+    <listitem>
+     <para>
+<guilabel>Automatic credit card payments</guilabel> - If selected, after reconciling a credit card statment, prompt the user to enter a credit card payment.
+     </para>
+    </listitem>
+    <listitem>
+     <para>
+<guilabel>Check off cleared transactions</guilabel> - If selected, automatically check off cleared transactions when reconciling.
+     </para>
+    </listitem>
+    </itemizedlist>
+   </sect2>
+
+   <sect2 id="register2">
+    <title>Register</title>
+    <para>
+The <guilabel>Register</guilabel> preferences item affects the behavior of the transaction register windows.  More information about the transaction register can be found in "Chapter 4: Entering Transactions" of this guide.
+    </para>
+    <itemizedlist>
+    <listitem>
+     <para>
+<guilabel>Default Register Style</guilabel> - you can choose from 3 different styles for register windows, <guilabel>Basic Ledger</guilabel> (default), <guilabel>Auto-Split Ledger</guilabel>, and <guilabel>Transaction Journal</guilabel>.
+     </para>
+    </listitem>
+    <listitem>
+     <para>
+<guilabel>Double Line Mode</guilabel> - If selected, show two lines of information for each transaction instead of one.
+     </para>
+    </listitem>
+    <listitem>
+     <para>
+<guilabel>'Enter' moves to blank transaction</guilabel> - If selected, move to the blank transaction after the user presses 'enter', otehrwise move down on row.
+     </para>
+    </listitem>
+    <listitem>
+     <para>
+<guilabel>Confirm before changing reconciled</guilabel> - If selected, use a dialog to confirm a change to a reconciled transaction.
+     </para>
+    </listitem>
+    <listitem>
+     <para>
+<guilabel>Register font:</guilabel> - The font to use in the transaction register window.
+     </para>
+    </listitem>
+    <listitem>
+     <para>
+<guilabel>Register hint font:</guilabel> - The font to use to show hints in the transaction register window.
+     </para>
+    </listitem>
+    </itemizedlist>
+   </sect2>
+
+   <sect2 id="registercolors2">
+    <title>Register Colors</title>
+    <para>
+The <guilabel>Register Colors</guilabel> preferences item changes the appearance of the register window.  To change the color of one of the items listed, simply click on the color box and choose the new color.  More information about the transaction register can be found in "Chapter 4: Entering Transactions" of this guide.
+    </para>
+    <para>
+If selected, the item <guilabel>Double mode colors alternate with tranactions</guilabel> configures the register window to alternate between the primary and secondary colors with each transaction, instead of each row.
+    </para>
+   </sect2>
+
+   <sect2 id="schedtrans2">
+    <title>Scheduled Transactions</title>
+    <para>
+The <guilabel>Schedules Transactions</guilabel> preferences item affects the behavior of GnuCash for scheduling transactions.  More information about scheduled transactions can be found in "Chapter 4: Entering Transactions" of this guide.
+    </para>
+    <itemizedlist>
+    <listitem>
+     <para>
+<guilabel>Run on GnuCash start</guilabel> - If selected, the "Since-Last-Run" window will appear on GnuCah startup.
+     </para>
+    </listitem>
+    <listitem>
+     <para>
+<guilabel>Auto-Create new Scheduled Transactions by default</guilabel> - If selected, new Scheduled Transactions will have the 'Auto Create' flag set by default.
+     </para>
+    </listitem>
+    <listitem>
+     <para>
+<guilabel>Notify on new, autocreated Scheduled Transactions</guilabel> - If selcted, new Scheduled Transactions will have the 'Auto Create' flag set to 'Notify' by default.
+     </para>
+    </listitem>
+    <listitem>
+     <para>
+<guilabel>Default number of days in advance to create</guilabel> - The default nuber of days in advance to create new Scheduled Transactions.
+     </para>
+    </listitem>
+    <listitem>
+     <para>
+<guilabel>Default number of days in advance to remind</guilabel> - The default nuber of days in advance to remind on new Scheduled Transactions.
+     </para>
+    </listitem>
+    <listitem>
+     <para>
+<guilabel>Template Register Lines:</guilabel> - Number of lines in the template register to display.
+     </para>
+    </listitem>
+    </itemizedlist>
+   </sect2>
   </sect1>
+
   <sect1 id="help1">
    <title>Getting Help</title>
     <para>
@@ -672,7 +844,7 @@ Next, create a file to store test data. This is the file that will be used in th
     </listitem>
     <listitem>
      <para>
-Now, adjust some preferences in the account tree window.  Select <guimenu>Edit</guimenu> -&gt; <guimenuitem>Preferences</guimenuitem> and change the tool bar buttons so that they display only text, not icons.  Click <guibutton>Apply</guibutton> and look at the tool bar buttons in the main window. Return to the <guilabel>Preferences</guilabel> dialog and change the tool bar buttons back to the default setting by clicking <guibutton>Default</guibutton>.
+Now, adjust some preferences in the account tree window.  Select <guimenu>Edit</guimenu> -&gt; <guimenuitem>Preferences</guimenuitem> -&gt; <guimenuitem>General</guimenuitem> and change the tool bar buttons so that they display only text, not icons.  Click <guibutton>Apply</guibutton> and look at the tool bar buttons in the main window. Return to the <guilabel>Preferences</guilabel> dialog and change the tool bar buttons back to the default setting by clicking <guibutton>Default</guibutton>.
 From the toolbar, select <guibutton>Options</guibutton> and select the <quote>Type</quote> item in the <guilabel>Account Fields to display</guilabel> option.  The main window should now look like this:
     <screenshot id="gcashdata2">
 	  <mediaobject>
@@ -681,10 +853,10 @@ From the toolbar, select <guibutton>Options</guibutton> and select the <quote>Ty
 	      srccredit="Chris Lyttle" format="PNG"/>
             </imageobject>
 	    <textobject>
-	        <phrase>The effect of changing the preferences</phrase>
+	        <phrase>The effect of changing the display options</phrase>
 	    </textobject>
 	    <caption>
-	       <para>This image shows the effect of changing the preferences.
+	       <para>This image shows the effect of changing the display options.
 	       </para>
 	    </caption>
           </mediaobject>
