@@ -1,3 +1,8 @@
+2003-06-17  Chris Lyttle  <chris@wilddev.net>
+
+	* guide/C/chapter2.xml: Added Jon Lapham's chpt2 patch
+	* AUTHORS: Added Jon Lapham
+	
 2003-06-16  Chris Lyttle  <chris@wilddev.net>
 
 	* doc-tools/Makefile.am: Change test -e to test -r
